fix spacing

--- a/packages/theme-monorail/scss/components/_comments.scss
+++ b/packages/theme-monorail/scss/components/_comments.scss
@@ -35,6 +35,7 @@ $bottom-gradient-height: 180px !default;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  margin-top: 24px;
   border-radius: 4px;
   border: 1px solid $gray-200;
   &--open {
@@ -55,7 +56,6 @@ $bottom-gradient-height: 180px !default;
   overflow: hidden;
   position: relative;
   display: block;
-  margin-top: 24px;
   padding-top: map-get($spacers, block);
   padding-right: map-get($spacers, 3);
   padding-bottom: map-get($spacers, block);
@@ -127,10 +127,10 @@ $bottom-gradient-height: 180px !default;
     @include media-breakpoint-up(sm) {
       @include make-col-ready();
       @include make-col(5);
+      padding-left: 0;
     }
     font-size: 16px;
     line-height: 1.44;
-    padding-left: 0;
     &--cta {
       font-size: 18px;
       display: block;
@@ -146,11 +146,6 @@ $bottom-gradient-height: 180px !default;
     }
     &:only-child {
       @include make-col(12);
-    }
-    .form-group {
-      @include media-breakpoint-up(md) {
-        // width: 50%;
-      }
     }
 
     .form-control {
